#1253 - multiple issues done from Sammler

--- a/src/sass/elements/_lists.scss
+++ b/src/sass/elements/_lists.scss
@@ -96,6 +96,7 @@ ul, ol {
 		    a:hover, 
 		    a:focus {
 			    text-decoration: underline;
+				text-decoration-thickness: 0.3rem;
 		    }
 	    }
 	}
