--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -173,11 +173,13 @@ Mixins File for Wordpress Theme FAU
 
 @mixin defaultlinkstyle() {
     box-shadow: none;
-    transition: initial;
+    transition: text-decoration .1s ease;
     padding: 0;
     text-decoration: underline;
     color: currentcolor;
     text-decoration-color:  currentcolor;
+    text-underline-offset: 0.3rem;
+    text-decoration-thickness: 0.15rem;
    
     &:hover,
     &:focus {
@@ -185,6 +187,7 @@ Mixins File for Wordpress Theme FAU
         text-decoration: underline;
         color: currentcolor;
         text-decoration-color: currentcolor;
+        text-decoration-thickness: 0.3rem;
     }
 }
 
@@ -203,22 +206,23 @@ Mixins File for Wordpress Theme FAU
 
 @mixin styledcontentlink() {
     cursor: pointer;
-
     word-wrap: break-word;
     color: var(--color-content-links);
-    box-shadow: inset 0 -0.1rem 0 0 var(--color-primary-ci-hell);
-    transition: all .3s ease-out; //box-shadow 0.3s ease-in-out;
+    /*box-shadow: inset 0 -0.1rem 0 0 var(--color-primary-ci-hell);*/
+    transition: text-decoration .1s ease;
     text-decoration: underline;
     text-decoration-color:  var(--color-primary-ci-hell);
-    text-underline-offset: 3px;
+    text-underline-offset: 0.3rem;
+    text-decoration-thickness: 0.15rem;
 
     &:active,
     &:focus,
     &:hover {
         text-decoration: underline;
         text-decoration-color:  var(--color-primary-ci-hell);
-        color: var(--color-primary-ci-hell-kontrast);
-        box-shadow: inset 0 -1.5rem 0 var(--color-primary-ci-hell);
+        /*color: var(--color-primary-ci-hell-kontrast);*/
+        /*box-shadow: inset 0 -1.5rem 0 var(--color-primary-ci-hell);*/
+        text-decoration-thickness: 0.3rem;
     }
 }
 
