--- a/src/sass/structure/footer/_pagefooter.scss
+++ b/src/sass/structure/footer/_pagefooter.scss
@@ -23,6 +23,8 @@
 	
 	a:hover, a:focus {
 	    text-decoration: underline;
+		text-underline-offset: 0.3rem;
+		text-decoration-thickness: 0.1rem;
 	}
 	@media (min-width: $screen-sm) {
 	    padding: 20px 0;
