--- a/src/sass/structure/hero/_herobase.scss
+++ b/src/sass/structure/hero/_herobase.scss
@@ -88,7 +88,7 @@
         p.presentationtitle,
         h1 {
             padding: 0;
-            margin: 20px 0;
+            margin: 0 0 10px 0;
         }
 
     }
