--- a/src/sass/structure/navigation/_subnav.scss
+++ b/src/sass/structure/navigation/_subnav.scss
@@ -6,22 +6,57 @@
     header {
 	
 	margin-top: 0px;
-	border-top: 1px solid var(--color-primary-ci-hell);
-	@include px2rem($font-size-h3);
+	@include px2rem($font-size-h2);
 	font-weight: bold;
 	
-	a {
-	    display: block;
-	    padding: 11px $fau-gutter-halfwidth;
-	    color: var(--color-submenu-toplevel-text);
-	    background: var(--color-submenu-toplevel-bg);
+		a {
+			display: block;
+			position: relative;
+			padding: 0px 22px 10px 22px;
+			color: var(--color-branding-zentral);
 
-	    &:hover,
-	    &:focus {
-	    	background-color: var(--color-submenu-hover-bg);
-		color: var(--color-submenu-hover-text);
-	    }
-	}
+			&:hover,
+			&:focus {
+				color: var(--color-branding-zentral);
+				transition: text-decoration 0.1s ease;
+				text-decoration: underline;
+				text-decoration-color: var(--color-primary-ci-hell);
+				text-underline-offset: 0.4rem;
+				text-decoration-thickness: 0.15rem;
+			}
+			
+			/*&::after {
+				content: "";
+				display: block;
+				box-sizing: border-box;
+				position: absolute;
+				width: 14px;
+				height: 14px;
+				border-bottom: 3px solid;
+				border-left: 3px solid;
+				transform: rotate(45deg);
+				left: 2px;
+				top: 13px;
+			}*/
+
+			&::before {
+				display: inline-block;
+				position: absolute;
+				content: '';
+				width: 2.5rem;
+				height: 2.5rem;
+				line-height: 1.4rem;
+				font-size: 0.9333333333rem;
+				background-image: inherit;
+				background-repeat: no-repeat;
+				background-size: 100%;
+				background-position: center center;
+				transform: rotate(180deg);
+				background-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath fill="%2304316A" d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z"/%3E%3C/svg%3E%0A');
+				left: -18px;
+				top: -3px;
+			}
+		}
     }
 }
 #subnav {
@@ -34,16 +69,20 @@
 	a {
 		text-decoration: none;
 		display: block;
-		@include px2rem($font-size-subnav-firstlevel);
+		@include px2rem($font-size-nav-level2);
+		font-weight: bold;
 
-		padding: 6px $fau-gutter-halfwidth;
+		padding: 6px 0;
 		color: var(--color-submenu-currentlevel-text);
-		background: var(--color-submenu-currentlevel-bg);
 
 		&:hover,
 		&:focus {
-			background-color: var(--color-submenu-hover-bg);
-			color: var(--color-submenu-hover-text);
+			color: var(--color-submenu-currentlevel-text);
+			transition: text-decoration 0.1s ease;
+			text-decoration: underline;
+			text-decoration-color: var(--color-primary-ci-hell);
+			text-underline-offset: 0.3rem;
+			text-decoration-thickness: 0.15rem;
 		}
 	}
 
@@ -55,91 +94,73 @@
 		border-bottom: 1px solid #fff;
 	}
 
+	.current_page_item {
+		> a {
+			transition: text-decoration 0.1s ease;
+			text-decoration: underline;
+			text-decoration-color: var(--color-primary-ci-hell);
+			text-underline-offset: 0.3rem;
+			text-decoration-thickness: 0.15rem;
+		}
+	}
 	.current_page_item,
 	.current_page_ancestor {
-		a {
-			color: var(--color-submenu-sublevel-text);
-			background-color: var(--color-submenu-sublevel-bg);
+		> a {
+			color: var(--color-submenu-currentlevel-text);
 			border: none;
-
-			&:hover,
-			&:focus {
-			    background-color: var(--color-submenu-hover-bg);
-			    color: var(--color-submenu-hover-text);
-			}
+			font-weight: bold;
 		}
 
 		> ul {
 			display: block;
 		}
-
-		> a {
-			font-weight: bold;
-		}
 	}
 
 	li li {
 	    a {
-		padding-left: 1.5rem;
+			padding-left: 1.2rem;
+			font-weight: unset;
+			@include px2rem($font-size-nav-level3);
 	    }
 	    li {
-		a {
-		    padding-left: 2.3rem;
-		    @include px2rem($font-size-subnav-sublevel);
-		}
-		li {
-		    @include px2rem($font-size-subnav-sublevel);
-		    a {
-			padding-left: 3.1rem;
-		    }
-		    li {
 			a {
-			    padding-left: 4rem;
+				padding-left: 2.4rem;
 			}
-			 li {
-			    a {
-				padding-left: 4.5rem;
-			    }
+			li {
+				a {
+					padding-left: 3.6rem;
+				}
+				li {
+					a {
+						padding-left: 4.8rem;
+					}
+					li {
+						a {
+							padding-left: 6rem;
+						}
+					}
+				}
 			}
-		    }
-		    
-		}
-
 	    } 
 	}
 
-
-
-	
-	
-	
 	li .current_page_item,
 	li .current_page_ancestor {
-		a {
-		    color:  var(--color-submenu-active-text);
-		    background: var(--color-submenu-active-bg);
-		}
-
-		li {
-			a:hover,
-			a:focus {
-			   background-color: var(--color-submenu-hover-bg);
-			   color: var(--color-submenu-hover-text);
-			}
+		> a {
+		    color: var(--color-submenu-currentlevel-text);
+			font-weight: unset;
 		}
 	}
 
 	li .current_page_ancestor .current_page_item a,
 	li li .current_page_ancestor a {
-		background: var(--color-submenu-currentpage-bg);
-		color: var(--color-submenu-currentpage-text);
+		color: var(--color-submenu-currentlevel-text);
 
 	}
 
 	li li li li a,
 	li li li li.current_page_item a {
-		background: var(--color-primary-dunkler);
-		color: var(--color-primary-dunkler-kontrast);
+		color: var(--color-submenu-currentlevel-text);
 	}
 	li.private-page,
 	li.protected-page {
@@ -162,7 +183,7 @@
 	li.protected-page.current_page_item,
 	li.protected-page.current_page_ancestor {
 	    a:after {
-		background-image: svg-icon-lock($color-submenu-currentpage-text, 16, 16);
+			background-image: svg-icon-lock($color-submenu-currentpage-text, 16, 16);
 	    }
 	}
 	li.captain-future,
