#1253, #1258, #1265 - New searchbar done, language switcher, centered numerial selectors for gallery slider, small fix done for left content navigation in mobile view

--- a/src/sass/structure/content/_gallery.scss
+++ b/src/sass/structure/content/_gallery.scss
@@ -368,7 +368,9 @@
 	
 	.slick-dots {
 	    position: absolute;
-	    display: block;
+	    //display: block;
+		display: flex;
+		justify-content: center;
 	    width: 100%;
 	    padding: 0;
 	    margin: 15px auto 15px auto;
@@ -387,10 +389,10 @@
 		button {
 		    
 		    display: block;
-		    width: 1.5rem;
-		    height: 1.5rem;
+		    width: 2rem;
+		    height: 1.8rem;
 		    cursor: pointer;
-		    border-radius: 50%;
+			border-radius: var(--border-radius, 0px);
 		    padding: 0;
 		    color: var(--color-primary-ci-hell-kontrast);
 		    background-color: var(--color-primary-ci-hell);
