--- a/src/sass/structure/header/_metanav.scss
+++ b/src/sass/structure/header/_metanav.scss
@@ -253,7 +253,7 @@
 .meta-logo {
     display: flex;
     max-height: 100%;
-    text-align: center;
+    text-align: left;
     
     @media (min-width: $screen-sm) {
         display: none;
