--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.3.34-0
+Version: 2.3.34-182
 Requires at least: 6.1
 Tested up to: 6.2
 Requires PHP: 8.0
@@ -1379,8 +1379,7 @@ Icons as functions
   margin-right: 0.5rem;
 }
 
-.svg-icon, .widget_search .search-text .searchicon,
-.searchform-content .search-text .searchicon, #subnav li.captain-future a:after,
+.svg-icon, #subnav li.captain-future a:after,
 #subnav li.draft-page a:after, #subnav li.private-page a:after,
 #subnav li.protected-page a:after, .meta-links .fauhome a:before {
   display: inline-block;
@@ -9076,7 +9075,7 @@ body.embedded .news-item .news-meta {
   }
 }
 #meta .header-row {
-  justify-content: space-between;
+  justify-content: start;
   align-items: center;
   min-height: 50px;
   padding: 4px 0;
@@ -9351,7 +9350,7 @@ body.nav-toggled #headerwrapper {
 .meta-logo {
   display: flex;
   max-height: 100%;
-  text-align: center;
+  text-align: left;
 }
 @media (min-width: 768px) {
   .meta-logo {
@@ -9427,6 +9426,29 @@ body.nav-toggled #headerwrapper {
     margin-right: auto;
   }
 }
+.meta-search .search-initiate-button {
+  background-color: var(--color-zentral-basis);
+  padding: 2px 5px 1px 6px;
+  border-radius: var(--border-radius);
+  cursor: pointer;
+}
+.meta-search .search-initiate-button.active {
+  display: none;
+}
+.meta-search .search-initiate-button svg {
+  display: block;
+  width: 30px;
+  height: 30px;
+  fill: var(--color-white);
+}
+.meta-search .search-initiate-button:hover, .meta-search .search-initiate-button:focus {
+  background: var(--color-zentral-dunkelste);
+}
+@media (max-width: 768px) {
+  .meta-search .search-initiate-button {
+    display: none;
+  }
+}
 .active-meta-widget .meta-search {
   display: inline;
   flex-shrink: 0;
@@ -9436,46 +9458,54 @@ body.nav-toggled #headerwrapper {
 }
 .meta-search .searchform {
   display: flex;
-  transition: 0.5s all;
   border: none;
   margin: 0;
   padding: 5px 0;
 }
 .meta-search .searchform input[type=text] {
   border-radius: var(--border-radius);
-  padding: 0.3rem 1rem 0.3rem 1rem;
-  width: calc(100% - 55px);
+  width: 0;
   border: none;
   outline: none;
-  color: #a4acbd;
+  color: var(--color-zentral-basis);
   height: 1.875rem;
-  display: inline-block;
   margin-bottom: 0px;
   background: var(--color-white);
   font-weight: bold;
   visibility: hidden;
+  transition: 0.5s all;
 }
 .meta-search .searchform input[type=text]:focus {
   box-shadow: none;
 }
 .meta-search .searchform input[type=text]::placeholder {
   opacity: 0.5;
-  color: var(--color-branding-zentral) !important;
+  color: var(--color-zentral-basis) !important;
+}
+@media (max-width: 768px) {
+  .meta-search .searchform input[type=text] {
+    visibility: visible;
+    width: calc(100% - 45px);
+  }
+}
+.meta-search .searchform input[type=text].active {
+  visibility: visible;
+  padding: 0.3rem 2.5rem 0.3rem 0.8rem;
 }
 @media (min-width: 768px) {
-  .meta-search .searchform input[type=text] {
+  .meta-search .searchform input[type=text].active {
     width: 160px;
   }
-  .active-meta-widget .meta-search .searchform input[type=text] {
+  .active-meta-widget .meta-search .searchform input[type=text].active {
     width: 150px;
   }
 }
 @media (min-width: 1200px) {
-  .meta-search .searchform input[type=text] {
+  .meta-search .searchform input[type=text].active {
     width: 250px;
   }
-  .active-meta-widget .meta-search .searchform input[type=text] {
-    width: 180px;
+  .active-meta-widget .meta-search .searchform input[type=text].active {
+    width: 200px;
   }
 }
 .meta-search .searchform input[type=submit] {
@@ -9483,16 +9513,32 @@ body.nav-toggled #headerwrapper {
   position: relative;
   z-index: 100;
   height: 1.875rem;
-  padding: 0 15px;
+  width: 0;
+  padding: 0;
   font-weight: bold;
   border: none;
   outline: none;
   color: var(--color-white);
   background: var(--color-zentral-basis);
-  display: inline-block;
   margin: 0;
-  margin-left: -20px;
   visibility: hidden;
+  opacity: 0;
+  transition: 0.5s all;
+}
+@media (max-width: 768px) {
+  .meta-search .searchform input[type=submit] {
+    visibility: visible;
+    opacity: 1;
+    width: auto;
+    padding: 0 15px;
+  }
+}
+.meta-search .searchform input[type=submit].active {
+  visibility: visible;
+  width: auto;
+  padding: 0 15px;
+  margin-left: -31px;
+  opacity: 1;
 }
 .meta-search .searchform input[type=submit]:hover, .meta-search .searchform input[type=submit]:focus {
   background: var(--color-zentral-dunkelste);
@@ -10127,19 +10173,6 @@ body:not(.mainnav-forceclick):not(.ismobile) .nav > li.has-sub:focus-within .nav
   position: relative;
   padding: 0px 22px 10px 22px;
   color: var(--color-branding-zentral);
-  /*&::after {
-  	content: "";
-  	display: block;
-  	box-sizing: border-box;
-  	position: absolute;
-  	width: 14px;
-  	height: 14px;
-  	border-bottom: 3px solid;
-  	border-left: 3px solid;
-  	transform: rotate(45deg);
-  	left: 2px;
-  	top: 13px;
-  }*/
 }
 .sidebar-subnav header a:hover, .sidebar-subnav header a:focus {
   color: var(--color-branding-zentral);
@@ -10167,6 +10200,17 @@ body:not(.mainnav-forceclick):not(.ismobile) .nav > li.has-sub:focus-within .nav
   background-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath fill="%2304316A" d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z"/%3E%3C/svg%3E%0A');
   left: -18px;
   top: -3px;
+}
+@media (max-width: 768px) {
+  .sidebar-subnav header a {
+    padding: 0px 22px 0px 22px;
+  }
+}
+@media (max-width: 768px) {
+  .sidebar-subnav header {
+    background-color: var(--color-white);
+    padding: 5px 0 5px 20px;
+  }
 }
 
 #subnav {
@@ -10205,6 +10249,11 @@ body:not(.mainnav-forceclick):not(.ismobile) .nav > li.has-sub:focus-within .nav
   text-decoration-color: var(--color-primary-ci-hell);
   text-underline-offset: 0.3rem;
   text-decoration-thickness: 0.15rem;
+}
+@media (max-width: 768px) {
+  #subnav a {
+    padding: 6px 15px;
+  }
 }
 #subnav ul {
   display: none;
@@ -13043,18 +13092,27 @@ main .news-more-links .news-rss:hover:before {
   border: none;
 }
 
+.widget_search .search-text,
+.searchform-content .search-text {
+  /*.searchicon {
+  @extend .svg-icon;
+  @include svg-icon-sizes(1.1rem);
+  background-image: svg-icon-search(#fff, 16, 16);
+  margin-right: -2rem;
+  margin-left: 1rem;
+    }*/
+}
 .widget_search .search-text input[type=text],
 .searchform-content .search-text input[type=text] {
-  border-radius: 20px;
-  background-clip: padding-box;
+  border-radius: var(--border-radius);
   font-size: 1rem;
   line-height: 1.5rem;
-  border: 1px solid var(--color-primary-ci-hell);
   max-width: min(25rem, 90%);
-  padding: 0.5rem 7rem 0.5rem 2rem;
+  padding: 0.5rem 2.5rem 0.5rem 1rem;
   height: inherit;
   margin: 0;
   width: 100%;
+  font-weight: bold;
   background: var(--color-primary-ci-hell);
   color: var(--color-primary-ci-hell-kontrast);
 }
@@ -13082,15 +13140,14 @@ main .news-more-links .news-rss:hover:before {
 }
 .widget_search .search-text input[type=submit],
 .searchform-content .search-text input[type=submit] {
-  border-radius: 20px;
-  background-clip: padding-box;
+  border-radius: var(--border-radius);
   font-size: 1rem;
   line-height: 1.5rem;
-  border: 1px solid var(--color-primary-ci-hell);
   color: var(--color-button-text);
   background-color: var(--color-button-bg);
   padding: 0.5rem 1rem;
   height: inherit;
+  font-weight: bold;
   margin-left: -5rem;
 }
 .widget_search .search-text input[type=submit]:hover, .widget_search .search-text input[type=submit]:focus,
@@ -13098,16 +13155,6 @@ main .news-more-links .news-rss:hover:before {
 .searchform-content .search-text input[type=submit]:focus {
   color: var(--color-button-hover-text);
   background-color: var(--color-button-hover-bg);
-}
-.widget_search .search-text .searchicon,
-.searchform-content .search-text .searchicon {
-  width: 1.1rem;
-  height: 1.1rem;
-  line-height: 1.1rem;
-  font-size: calc(1.1rem / 1.5);
-  background-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 124.524 124.524" width="16" height="16"%3E%3Cpath fill="%23FFFFFF" d="M51,102.05c10.5,0,20.2-3.2,28.3-8.6l29.3,29.3c2.301,2.3,6.101,2.3,8.5,0l5.7-5.7c2.3-2.3,2.3-6.1,0-8.5L93.4,79.35 c5.399-8.1,8.6-17.8,8.6-28.3c0-28.1-22.9-51-51-51c-28.1,0-51,22.9-51,51C0,79.149,22.8,102.05,51,102.05z M51,20.05 c17.1,0,31,13.9,31,31c0,17.1-13.9,31-31,31c-17.1,0-31-13.9-31-31C20,33.95,33.9,20.05,51,20.05z"/%3E%3C/svg%3E%0A');
-  margin-right: -2rem;
-  margin-left: 1rem;
 }
 .widget_search .search-radio-label,
 .searchform-content .search-radio-label {
@@ -13224,9 +13271,6 @@ main .news-more-links .news-rss:hover:before {
 }
 .search-results .nav-links a:hover, .search-results .nav-links a:focus {
   text-decoration: none;
-}
-.search-results .nav-links a:hover, .search-results .nav-links a:focus {
-  text-decoration: underline;
 }
 .search-results .nav-links .dots {
   display: inline-block;
@@ -13558,7 +13602,8 @@ main .news-more-links .news-rss:hover:before {
 }
 .image-gallery .gallery-slick .slick-dots {
   position: absolute;
-  display: block;
+  display: flex;
+  justify-content: center;
   width: 100%;
   padding: 0;
   margin: 15px auto 15px auto;
@@ -13576,10 +13621,10 @@ main .news-more-links .news-rss:hover:before {
 }
 .image-gallery .gallery-slick .slick-dots li button {
   display: block;
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 2rem;
+  height: 1.8rem;
   cursor: pointer;
-  border-radius: 50%;
+  border-radius: var(--border-radius, 0px);
   padding: 0;
   color: var(--color-primary-ci-hell-kontrast);
   background-color: var(--color-primary-ci-hell);
@@ -15902,13 +15947,49 @@ main .rrze-calendar.kalender .inhalt .monatsansicht .kopfzeile .tag {
   right: inherit;
   margin: 0;
 }
-.fau-theme .meta-widget.rrze-multilang-widget li a {
-  width: 100%;
+.fau-theme .meta-widget.rrze-multilang-widget ul {
+  margin: unset;
 }
-.fau-theme .meta-widget.rrze-multilang-widget li a ::before {
+.fau-theme .meta-widget.rrze-multilang-widget ul li a {
+  width: 100%;
+  text-decoration: none;
+  border-radius: var(--border-radius);
+  height: 33px;
+  background-color: var(--color-zentral-basis);
+  color: var(--color-white);
+  line-height: 33px;
+  padding: 0 7px;
+}
+.fau-theme .meta-widget.rrze-multilang-widget ul li a:hover, .fau-theme .meta-widget.rrze-multilang-widget ul li a:focus {
+  box-shadow: none;
+  background: none;
+  background-color: var(--color-zentral-dunkelste);
+}
+.fau-theme .meta-widget.rrze-multilang-widget ul li a::before {
+  content: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"><path fill="%23ffffff" d="M62.4,101c-1.5-2.1-2.1-3.4-1.8-3.9c0.2-0.5,1.6-0.7,3.9-0.5c2.3,0.2,4.2,0.5,5.8,0.9c1.5,0.4,2.8,1,3.8,1.7 c1,0.7,1.8,1.5,2.3,2.6c0.6,1,1,2.3,1.4,3.7c0.7,2.8,0.5,4.7-0.5,5.7c-1.1,1-2.6,0.8-4.6-0.6c-2.1-1.4-3.9-2.8-5.5-4.2 C65.5,105.1,63.9,103.2,62.4,101z M40.7,190.1c4.8-2.1,9-4.2,12.6-6.4c3.5-2.1,6.6-4.4,9.3-6.8c2.6-2.3,5-4.9,7-7.7 c2-2.7,3.8-5.8,5.4-9.2c1.3,1.2,2.5,2.4,3.8,3.5c1.2,1.1,2.5,2.2,3.8,3.4c1.3,1.2,2.8,2.4,4.3,3.8c1.5,1.4,3.3,2.8,5.3,4.5 c0.7,0.5,1.4,0.9,2.1,1c0.7,0.1,1.7,0,3.1-0.6c1.3-0.5,3-1.4,5.1-2.8c2.1-1.3,4.7-3.1,7.9-5.4c1.6-1.1,2.4-2,2.3-2.7 c-0.1-0.7-1-1-2.7-0.9c-3.1,0.1-5.9,0.1-8.3-0.1c-2.5-0.2-5-0.6-7.4-1.4c-2.4-0.8-4.9-1.9-7.5-3.4c-2.6-1.5-5.6-3.6-9.1-6.2 c1-3.9,1.8-8,2.4-12.4c0.3-2.5,0.6-4.3,0.8-5.6c0.2-1.2,0.5-2.4,0.9-3.3c0.3-0.8,0.4-1.4,0.5-1.9c0.1-0.5-0.1-1-0.4-1.6 c-0.4-0.5-1-1.1-1.9-1.7c-0.9-0.6-2.2-1.4-3.9-2.3c2.4-0.9,5.1-1.7,7.9-2.6c2.7-0.9,5.7-1.8,8.8-2.7c3-0.9,4.5-1.9,4.6-3.1 c0.1-1.2-0.9-2.3-3.2-3.5c-1.5-0.8-2.9-1.1-4.3-0.9c-1.4,0.2-3.2,0.9-5.4,2.2c-0.6,0.4-1.8,0.9-3.4,1.6c-1.7,0.7-3.6,1.5-6,2.5 c-2.4,1-5,2-7.8,3.1c-2.9,1.1-5.8,2.2-8.7,3.2c-2.9,1.1-5.7,2-8.2,2.8c-2.6,0.8-4.6,1.4-6.1,1.6c-3.8,0.8-5.8,1.6-5.9,2.4 c0,0.8,1.5,1.6,4.4,2.4c1.2,0.3,2.3,0.6,3.1,0.6c0.8,0.1,1.7,0.1,2.5,0c0.8-0.1,1.6-0.3,2.4-0.5c0.8-0.3,1.7-0.7,2.8-1.1 c1.6-0.8,3.9-1.7,6.9-2.8c2.9-1,6.6-2.4,11.2-4c0.9,2.7,1.4,6,1.4,9.8c0,3.8-0.4,8.1-1.4,13c-1.3-1.1-2.7-2.3-4.2-3.6 c-1.5-1.3-2.9-2.6-4.3-3.9c-1.6-1.5-3.2-2.5-4.7-3c-1.6-0.5-3.4-0.5-5.5,0c-3.3,0.9-5,1.9-4.9,3.1c0,1.2,1.3,1.8,3.8,1.9 c0.9,0.1,1.8,0.3,2.7,0.6c0.9,0.3,1.9,0.9,3.2,1.8c1.3,0.9,2.9,2.2,4.7,3.8c1.8,1.6,4.2,3.7,7,6.3c-1.2,2.9-2.6,5.6-4.1,8 c-1.5,2.5-3.4,5-5.5,7.3c-2.2,2.4-4.7,4.8-7.7,7.2c-3,2.5-6.6,5.1-10.8,7.8c-4.3,2.8-6.5,4.7-6.5,5.6C35,192.1,37,191.7,40.7,190.1z M250.5,81.8v165.3l-111.6-36.4L10.5,253.4V76.1l29.9-10V10.4l81.2,28.7L231.3,2.6v73.1L250.5,81.8z M124.2,50.6L22.3,84.6v152.2 l101.9-33.9V50.6L124.2,50.6z M219.4,71.9V19L138.1,46L219.4,71.9z M227,201.9L196.5,92L176,85.6l-30.9,90.8l18.9,5.9l5.8-18.7 l31.9,10l5.7,22.3L227,201.9z M174.8,147.7l22.2,6.9l-10.9-42.9L174.8,147.7z"/></svg>');
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  position: relative;
+  margin: 4px 6px 0 0;
+  text-align: center;
+  vertical-align: top;
+}
+@media (max-width: 1400px) {
+  .fau-theme .meta-widget.rrze-multilang-widget ul li a {
+    margin-top: -1px;
+  }
+}
+.fau-theme .meta-widget.rrze-multilang-widget ul li:first-child::before {
   display: none;
 }
 @media (max-width: 768px) {
+  .fau-theme .meta-widget.rrze-multilang-widget {
+    top: 16px;
+    right: 60px;
+    left: unset;
+    display: none;
+  }
   .fau-theme .meta-widget.rrze-multilang-widget ul {
     width: auto;
   }
@@ -15928,6 +16009,16 @@ main .rrze-calendar.kalender .inhalt .monatsansicht .kopfzeile .tag {
   }
   .fau-theme .meta-widget.rrze-multilang-widget ul li {
     white-space: nowrap;
+  }
+}
+
+.mobile-language-switcher .meta-widget.rrze-multilang-widget {
+  display: none;
+}
+@media (max-width: 768px) {
+  .mobile-language-switcher .meta-widget.rrze-multilang-widget {
+    display: block;
+    z-index: 999;
   }
 }
 
