#1252 sticky header when scroll up show scroll down hide

--- a/src/sass/structure/header/_meta.scss
+++ b/src/sass/structure/header/_meta.scss
@@ -48,7 +48,8 @@
 }
 
 #headerwrapper {
-    position: sticky;
+    position: static;
+    width: 100%;
     top: 0;
     z-index: 150;
     transition: box-shadow 0.2s;
