--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.3.34-208
+Version: 2.3.34-209
 Requires at least: 6.1
 Tested up to: 6.2
 Requires PHP: 8.0
@@ -9106,7 +9106,8 @@ body.embedded .news-item .news-meta {
 }
 
 #headerwrapper {
-  position: sticky;
+  position: static;
+  width: 100%;
   top: 0;
   z-index: 150;
   transition: box-shadow 0.2s;
