#1252 screen-sm to 992px

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -384,7 +384,8 @@ $break-2200: 2200px;
 $screen-xs:                  480px;
 $screen-xs-min:              $screen-xs;
 
-$screen-sm:                  768px;
+//$screen-sm:                  768px;
+$screen-sm:                  992px;
 $screen-sm-min:              $screen-sm;
 
 $screen-md:                  992px;
