#1253 - Icons, Sticky Nav

--- a/src/sass/plugins/_fau-person.scss
+++ b/src/sass/plugins/_fau-person.scss
@@ -450,12 +450,12 @@
 	}
 
 	div [itemprop="telephone"].mobile::before {
-		background-image: url('data:image/svg+xml,<svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 53.72 89.07" style="enable-background:new 0 0 53.72 89.07;" xml:space="preserve"><path d="M46.53,0H7.21C3.22,0,0,3.23,0,7.21v74.65c0,3.99,3.23,7.21,7.21,7.21h39.31c3.99,0,7.21-3.23,7.21-7.21V7.21C53.74,3.23,50.5,0,46.53,0z M26.87,84.45c-2.65,0-4.79-2.14-4.79-4.79s2.14-4.81,4.79-4.81s4.79,2.14,4.79,4.79S29.52,84.45,26.87,84.45z M46.27,70.69H7.47V8.73h38.8C46.27,8.73,46.27,70.69,46.27,70.69z"/></svg>');
+		background-image: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 53.72 89.07" style="enable-background:new 0 0 53.72 89.07;" xml:space="preserve"><path d="M46.53,0H7.21C3.22,0,0,3.23,0,7.21v74.65c0,3.99,3.23,7.21,7.21,7.21h39.31c3.99,0,7.21-3.23,7.21-7.21V7.21C53.74,3.23,50.5,0,46.53,0z M26.87,84.45c-2.65,0-4.79-2.14-4.79-4.79s2.14-4.81,4.79-4.81s4.79,2.14,4.79,4.79S29.52,84.45,26.87,84.45z M46.27,70.69H7.47V8.73h38.8C46.27,8.73,46.27,70.69,46.27,70.69z"/></svg>');
 		background-size: 58%;
 	}
 
 	div [itemprop="url"]::before {
-		background-image: url('data:image/svg+xml,<svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 77 76.67" style="enable-background:new 0 0 77 76.67;" xml:space="preserve"><g><path d="M69.5,76.67H47.9V54.71c0-0.3-0.2-0.5-0.5-0.5H29.6c-0.3,0-0.5,0.2-0.5,0.5v21.96H7.5c-4.1,0-7.5-3.4-7.5-7.5V35.95c0-2.6,1.1-5.1,2.9-7l0.1-0.1l29.9-26.6c3.1-3,8.2-3,11.3,0l29.9,26.7c1.9,1.8,2.9,4.4,2.9,7v33.22C77,73.37,73.7,76.67,69.5,76.67z"/></g></svg>');
+		background-image: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 77 76.67" style="enable-background:new 0 0 77 76.67;" xml:space="preserve"><g><path d="M69.5,76.67H47.9V54.71c0-0.3-0.2-0.5-0.5-0.5H29.6c-0.3,0-0.5,0.2-0.5,0.5v21.96H7.5c-4.1,0-7.5-3.4-7.5-7.5V35.95c0-2.6,1.1-5.1,2.9-7l0.1-0.1l29.9-26.6c3.1-3,8.2-3,11.3,0l29.9,26.7c1.9,1.8,2.9,4.4,2.9,7v33.22C77,73.37,73.7,76.67,69.5,76.67z"/></g></svg>');
 		background-size: 90%;
 	}
 
