--- a/src/sass/structure/content/_search.scss
+++ b/src/sass/structure/content/_search.scss
@@ -73,13 +73,35 @@
 		display: block;
 		font-family: $fontStack;
 		
+		.post-meta-category,
+		.post-meta-date,
+		.post-meta-defaulttype,
+		.post-meta-news,
+		.post-meta-news-external {
+			&:before {
+				width: 1rem;
+				height: 1rem;
+				line-height: 1rem;
+				font-size: 0.6rem;
+				background-repeat: no-repeat;
+				display: inline-block;
+				background-size: 100%;
+				background-position: center center;
+				margin-right: 0.2rem;
+			}
+		}
+
 		.post-meta-category:before {
-		    @extend .fa;
-		    @extend .fa-tag;
+		    //@extend .fa;
+		    //@extend .fa-tag;
+
+			content: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 81.41 81.31" style="enable-background:new 0 0 81.41 81.31;" xml:space="preserve"><g><path d="M79.76,15.97L65.35,1.56c-1.08-1.11-2.6-1.67-4.14-1.54L40.07,1.56c-1.25,0.1-2.43,0.64-3.32,1.51L1.56,38.18C0.55,39.16-0.01,40.51,0,41.92c0,1.4,0.55,2.75,1.54,3.75l34.14,34.11c2.07,2.03,5.38,2.03,7.44,0l35.13-35.11c0.91-0.92,1.45-2.14,1.51-3.42l1.64-21.24C81.48,18.49,80.88,17.01,79.76,15.97z M73.51,40.53L39.4,74.75L6.57,41.92L40.79,7.71l20.47-1.59L75.2,20.07L73.51,40.53z M58.92,22.4c2.07,2.02,5.37,2.02,7.44,0c2.09-2.06,2.12-5.42,0.07-7.51s-5.42-2.12-7.51-0.07s-2.12,5.42-0.07,7.51C58.88,22.35,58.9,22.38,58.92,22.4z"/></g></svg>');
 		}
 		.post-meta-date:before {
-		    @extend .fa;
-		    @extend .fa-calendar;
+		    //@extend .fa;
+		    //@extend .fa-calendar;
+
+			content: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 86.88 86.88" style="enable-background:new 0 0 86.88 86.88;" xml:space="preserve"><g><path d="M83.78,6.21H65.16V3.1c0-1.71-1.39-3.1-3.1-3.1s-3.1,1.39-3.1,3.1v3.1H46.55V3.1c0-1.71-1.39-3.1-3.1-3.1s-3.1,1.39-3.1,3.1v3.1H27.93V3.1c0-1.71-1.39-3.1-3.1-3.1s-3.1,1.39-3.1,3.1v3.1H3.1C1.39,6.21,0,7.6,0,9.31v74.47c0,1.71,1.39,3.1,3.1,3.1h80.68c1.71,0,3.1-1.39,3.1-3.1V9.31C86.88,7.6,85.49,6.21,83.78,6.21z M21.72,12.41v3.1c0,1.71,1.39,3.1,3.1,3.1s3.1-1.39,3.1-3.1v-3.1h12.41v3.1c0,1.71,1.39,3.1,3.1,3.1s3.1-1.39,3.1-3.1v-3.1h12.41v3.1c0,1.71,1.39,3.1,3.1,3.1s3.1-1.39,3.1-3.1v-3.1h15.52v12.41H6.21V12.41H21.72z M6.21,80.68V31.03h74.47v49.65H6.21z M52.75,43.44c0,1.71-1.39,3.1-3.1,3.1H37.24c-1.71,0-3.1-1.39-3.1-3.1s1.39-3.1,3.1-3.1h12.41C51.36,40.34,52.75,41.73,52.75,43.44z M74.47,43.44c0,1.71-1.39,3.1-3.1,3.1H58.96c-1.71,0-3.1-1.39-3.1-3.1s1.39-3.1,3.1-3.1h12.41C73.08,40.34,74.47,41.73,74.47,43.44z M31.03,43.44c0,1.71-1.39,3.1-3.1,3.1H15.52c-1.71,0-3.1-1.39-3.1-3.1s1.39-3.1,3.1-3.1h12.41C29.64,40.34,31.03,41.73,31.03,43.44z M52.75,55.85c0,1.71-1.39,3.1-3.1,3.1H37.24c-1.71,0-3.1-1.39-3.1-3.1c0-1.71,1.39-3.1,3.1-3.1h12.41C51.36,52.75,52.75,54.14,52.75,55.85z M74.47,55.85c0,1.71-1.39,3.1-3.1,3.1H58.96c-1.71,0-3.1-1.39-3.1-3.1c0-1.71,1.39-3.1,3.1-3.1h12.41C73.08,52.75,74.47,54.14,74.47,55.85z M31.03,55.85c0,1.71-1.39,3.1-3.1,3.1H15.52c-1.71,0-3.1-1.39-3.1-3.1c0-1.71,1.39-3.1,3.1-3.1h12.41C29.64,52.75,31.03,54.14,31.03,55.85z M52.75,68.27c0,1.71-1.39,3.1-3.1,3.1H37.24c-1.71,0-3.1-1.39-3.1-3.1c0-1.71,1.39-3.1,3.1-3.1h12.41C51.36,65.16,52.75,66.55,52.75,68.27z M74.47,68.27c0,1.71-1.39,3.1-3.1,3.1H58.96c-1.71,0-3.1-1.39-3.1-3.1c0-1.71,1.39-3.1,3.1-3.1h12.41C73.08,65.16,74.47,66.55,74.47,68.27z M31.03,68.27c0,1.71-1.39,3.1-3.1,3.1H15.52c-1.71,0-3.1-1.39-3.1-3.1c0-1.71,1.39-3.1,3.1-3.1h12.41C29.64,65.16,31.03,66.55,31.03,68.27z"/></g></svg>');
 		}
 		.post-meta-event:before {
 		    @extend .fa;
@@ -90,16 +112,24 @@
 		    @extend .fa-user;
 		}
 		.post-meta-defaulttype:before {
-		    @extend .fa;
-		    @extend .fa-bookmark;
+		    //@extend .fa;
+		    //@extend .fa-bookmark;
+
+			content: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 76 95.36" style="enable-background:new 0 0 76 95.36;" xml:space="preserve"><path d="M51,2.7c-0.76-0.86-1.85-1.34-3-1.34H10c-5.52,0-10,4.48-10,10v74c0,5.52,4.48,10,10,10h56c5.52,0,10-4.48,10-10v-53c0-0.98-0.35-1.93-1-2.66L51,2.7z M54,18.13l7.32,8.23H54V18.13z M66,87.36H10c-1.1,0-2-0.9-2-2v-74c0-1.1,0.9-2,2-2h36v18c0,3.87,3.13,7,7,7h15v51C68,86.46,67.1,87.36,66,87.36z"/><path d="M55,44.36H17c-2.21,0-4,1.79-4,4s1.79,4,4,4h38c2.21,0,4-1.79,4-4S57.21,44.36,55,44.36z"/><path d="M55,57.86H17c-2.21,0-4,1.79-4,4c0,2.21,1.79,4,4,4h38c2.21,0,4-1.79,4-4C59,59.65,57.21,57.86,55,57.86z"/><path d="M55,71.36H17c-2.21,0-4,1.79-4,4s1.79,4,4,4h38c2.21,0,4-1.79,4-4S57.21,71.36,55,71.36z"/><path d="M17,35.36h18c2.21,0,4-1.79,4-4s-1.79-4-4-4H17c-2.21,0-4,1.79-4,4S14.79,35.36,17,35.36z"/></svg>');
+			width: 0.8rem;
+			height: 0.8rem;
 		}
 		.post-meta-news:before {
-		    @extend .fa;
-		    @extend .fa-newspaper-o;
+		    //@extend .fa;
+		    //@extend .fa-newspaper-o;
+
+			content: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 80.6 74.84" style="enable-background:new 0 0 80.6 74.84;" xml:space="preserve"><style type="text/css">.st0{fill-rule:evenodd;clip-rule:evenodd;}</style><path class="st0" d="M8.64,0C3.87,0,0,3.87,0,8.64v23.03c0,4.77,3.87,8.64,8.64,8.64h23.03c4.77,0,8.64-3.87,8.64-8.64V8.64C40.3,3.87,36.43,0,31.66,0H8.64z M48.93,0c-1.59,0-2.88,1.29-2.88,2.88s1.29,2.88,2.88,2.88h28.78c1.59,0,2.88-1.29,2.88-2.88S79.31,0,77.72,0H48.93z M8.64,5.76h23.03c1.59,0,2.88,1.29,2.88,2.88v13.93l-13.11-7.87c-0.81-0.41-1.76-0.41-2.57,0L5.76,22.56V8.64C5.76,7.05,7.05,5.76,8.64,5.76z M48.93,11.51c-1.59,0-2.88,1.29-2.88,2.88s1.29,2.88,2.88,2.88h28.78c1.59,0,2.88-1.29,2.88-2.88s-1.29-2.88-2.88-2.88H48.93z M48.93,23.03c-1.59,0-2.88,1.29-2.88,2.88s1.29,2.88,2.88,2.88h28.78c1.59,0,2.88-1.29,2.88-2.88s-1.29-2.88-2.88-2.88H48.93z M48.93,34.54c-1.59,0-2.88,1.29-2.88,2.88c0,1.59,1.29,2.88,2.88,2.88h28.78c1.59,0,2.88-1.29,2.88-2.88c0-1.59-1.29-2.88-2.88-2.88H48.93z M2.88,46.06C1.29,46.06,0,47.35,0,48.93c0,1.59,1.29,2.88,2.88,2.88h74.84c1.59,0,2.88-1.29,2.88-2.88c0-1.59-1.29-2.88-2.88-2.88H2.88z M2.88,57.57C1.29,57.57,0,58.86,0,60.45c0,1.59,1.29,2.88,2.88,2.88h74.84c1.59,0,2.88-1.29,2.88-2.88c0-1.59-1.29-2.88-2.88-2.88H2.88z M2.88,69.08C1.29,69.08,0,70.37,0,71.96c0,1.59,1.29,2.88,2.88,2.88h74.84c1.59,0,2.88-1.29,2.88-2.88c0-1.59-1.29-2.88-2.88-2.88H2.88z"/></svg>');
 		}
 		.post-meta-news-external:before {
-		    @extend .fa;
-		    @extend .fa-link;
+		    //@extend .fa;
+		    //@extend .fa-link;
+
+			content: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 80.6 74.84" style="enable-background:new 0 0 80.6 74.84;" xml:space="preserve"><style type="text/css">.st0{fill-rule:evenodd;clip-rule:evenodd;}</style><path class="st0" d="M8.64,0C3.87,0,0,3.87,0,8.64v23.03c0,4.77,3.87,8.64,8.64,8.64h23.03c4.77,0,8.64-3.87,8.64-8.64V8.64C40.3,3.87,36.43,0,31.66,0H8.64z M48.93,0c-1.59,0-2.88,1.29-2.88,2.88s1.29,2.88,2.88,2.88h28.78c1.59,0,2.88-1.29,2.88-2.88S79.31,0,77.72,0H48.93z M8.64,5.76h23.03c1.59,0,2.88,1.29,2.88,2.88v13.93l-13.11-7.87c-0.81-0.41-1.76-0.41-2.57,0L5.76,22.56V8.64C5.76,7.05,7.05,5.76,8.64,5.76z M48.93,11.51c-1.59,0-2.88,1.29-2.88,2.88s1.29,2.88,2.88,2.88h28.78c1.59,0,2.88-1.29,2.88-2.88s-1.29-2.88-2.88-2.88H48.93z M48.93,23.03c-1.59,0-2.88,1.29-2.88,2.88s1.29,2.88,2.88,2.88h28.78c1.59,0,2.88-1.29,2.88-2.88s-1.29-2.88-2.88-2.88H48.93z M48.93,34.54c-1.59,0-2.88,1.29-2.88,2.88c0,1.59,1.29,2.88,2.88,2.88h28.78c1.59,0,2.88-1.29,2.88-2.88c0-1.59-1.29-2.88-2.88-2.88H48.93z M2.88,46.06C1.29,46.06,0,47.35,0,48.93c0,1.59,1.29,2.88,2.88,2.88h74.84c1.59,0,2.88-1.29,2.88-2.88c0-1.59-1.29-2.88-2.88-2.88H2.88z M2.88,57.57C1.29,57.57,0,58.86,0,60.45c0,1.59,1.29,2.88,2.88,2.88h74.84c1.59,0,2.88-1.29,2.88-2.88c0-1.59-1.29-2.88-2.88-2.88H2.88z M2.88,69.08C1.29,69.08,0,70.37,0,71.96c0,1.59,1.29,2.88,2.88,2.88h74.84c1.59,0,2.88-1.29,2.88-2.88c0-1.59-1.29-2.88-2.88-2.88H2.88z"/></svg>');
 		}
 		
 		.post-meta-attachment:before {
@@ -138,6 +168,12 @@
 	}
 	.content-person {
 	    border: none;
+	}
+
+	.continue {
+		margin-left: unset;
+		text-align: right;
+		margin-top: 0.5rem;
 	}
 	
 }
