--- a/src/sass/structure/content/_news-items.scss
+++ b/src/sass/structure/content/_news-items.scss
@@ -117,17 +117,42 @@
 		}
 		
 		.news-meta-categories:before {
-		    @extend .fa;
-		    @extend .fa-tag;
+		    //@extend .fa;
+		    //@extend .fa-tag;
+			
+			content: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 81.41 81.31" style="enable-background:new 0 0 81.41 81.31;" xml:space="preserve"><g><path d="M79.76,15.97L65.35,1.56c-1.08-1.11-2.6-1.67-4.14-1.54L40.07,1.56c-1.25,0.1-2.43,0.64-3.32,1.51L1.56,38.18C0.55,39.16-0.01,40.51,0,41.92c0,1.4,0.55,2.75,1.54,3.75l34.14,34.11c2.07,2.03,5.38,2.03,7.44,0l35.13-35.11c0.91-0.92,1.45-2.14,1.51-3.42l1.64-21.24C81.48,18.49,80.88,17.01,79.76,15.97z M73.51,40.53L39.4,74.75L6.57,41.92L40.79,7.71l20.47-1.59L75.2,20.07L73.51,40.53z M58.92,22.4c2.07,2.02,5.37,2.02,7.44,0c2.09-2.06,2.12-5.42,0.07-7.51s-5.42-2.12-7.51-0.07s-2.12,5.42-0.07,7.51C58.88,22.35,58.9,22.38,58.92,22.4z"/></g></svg>');
+			
 		}
 		.news-meta-date:before {
-		    @extend .fa;
-		    @extend .fa-calendar;
+		    //@extend .fa;
+		    //@extend .fa-calendar;
+
+			content: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 86.88 86.88" style="enable-background:new 0 0 86.88 86.88;" xml:space="preserve"><g><path d="M83.78,6.21H65.16V3.1c0-1.71-1.39-3.1-3.1-3.1s-3.1,1.39-3.1,3.1v3.1H46.55V3.1c0-1.71-1.39-3.1-3.1-3.1s-3.1,1.39-3.1,3.1v3.1H27.93V3.1c0-1.71-1.39-3.1-3.1-3.1s-3.1,1.39-3.1,3.1v3.1H3.1C1.39,6.21,0,7.6,0,9.31v74.47c0,1.71,1.39,3.1,3.1,3.1h80.68c1.71,0,3.1-1.39,3.1-3.1V9.31C86.88,7.6,85.49,6.21,83.78,6.21z M21.72,12.41v3.1c0,1.71,1.39,3.1,3.1,3.1s3.1-1.39,3.1-3.1v-3.1h12.41v3.1c0,1.71,1.39,3.1,3.1,3.1s3.1-1.39,3.1-3.1v-3.1h12.41v3.1c0,1.71,1.39,3.1,3.1,3.1s3.1-1.39,3.1-3.1v-3.1h15.52v12.41H6.21V12.41H21.72z M6.21,80.68V31.03h74.47v49.65H6.21z M52.75,43.44c0,1.71-1.39,3.1-3.1,3.1H37.24c-1.71,0-3.1-1.39-3.1-3.1s1.39-3.1,3.1-3.1h12.41C51.36,40.34,52.75,41.73,52.75,43.44z M74.47,43.44c0,1.71-1.39,3.1-3.1,3.1H58.96c-1.71,0-3.1-1.39-3.1-3.1s1.39-3.1,3.1-3.1h12.41C73.08,40.34,74.47,41.73,74.47,43.44z M31.03,43.44c0,1.71-1.39,3.1-3.1,3.1H15.52c-1.71,0-3.1-1.39-3.1-3.1s1.39-3.1,3.1-3.1h12.41C29.64,40.34,31.03,41.73,31.03,43.44z M52.75,55.85c0,1.71-1.39,3.1-3.1,3.1H37.24c-1.71,0-3.1-1.39-3.1-3.1c0-1.71,1.39-3.1,3.1-3.1h12.41C51.36,52.75,52.75,54.14,52.75,55.85z M74.47,55.85c0,1.71-1.39,3.1-3.1,3.1H58.96c-1.71,0-3.1-1.39-3.1-3.1c0-1.71,1.39-3.1,3.1-3.1h12.41C73.08,52.75,74.47,54.14,74.47,55.85z M31.03,55.85c0,1.71-1.39,3.1-3.1,3.1H15.52c-1.71,0-3.1-1.39-3.1-3.1c0-1.71,1.39-3.1,3.1-3.1h12.41C29.64,52.75,31.03,54.14,31.03,55.85z M52.75,68.27c0,1.71-1.39,3.1-3.1,3.1H37.24c-1.71,0-3.1-1.39-3.1-3.1c0-1.71,1.39-3.1,3.1-3.1h12.41C51.36,65.16,52.75,66.55,52.75,68.27z M74.47,68.27c0,1.71-1.39,3.1-3.1,3.1H58.96c-1.71,0-3.1-1.39-3.1-3.1c0-1.71,1.39-3.1,3.1-3.1h12.41C73.08,65.16,74.47,66.55,74.47,68.27z M31.03,68.27c0,1.71-1.39,3.1-3.1,3.1H15.52c-1.71,0-3.1-1.39-3.1-3.1c0-1.71,1.39-3.1,3.1-3.1h12.41C29.64,65.16,31.03,66.55,31.03,68.27z"/></g></svg>');
 		}
 		.news-meta-videopost-author:before {
-		    @extend .fa;
-		    @extend .fa-pencil;
+		    //@extend .fa;
+		    //@extend .fa-pencil;
+
+			content: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 81.41 81.63" style="enable-background:new 0 0 81.41 81.63;" xml:space="preserve"><g><path d="M69.99,2.4l8.64,8.13c3.49,3.28,3.72,8.72,0.58,12.29l-0.24,0.27l-51.3,52.26L0,81.63l6.28-27.65L57.68,2.59C61.06-0.79,66.51-0.87,69.99,2.4z M10.54,58.73L6.9,74.73l16.18-3.68c-1.18-3.79-2.48-6.37-3.79-7.68C17.93,62,14.98,60.42,10.54,58.73z M52.87,14.75l-39.5,39.5c4.56,1.8,7.74,3.58,9.61,5.44c1.78,1.78,3.28,4.54,4.59,8.32l38.92-39.65L52.87,14.75z M61.36,6.27l-4.8,4.8l13.58,13.58l5.03-5.13l0.2-0.22c1.23-1.47,1.11-3.66-0.3-4.99l-8.64-8.13C64.99,4.84,62.75,4.88,61.36,6.27z"/></g></svg>');
 		}
+
+		.news-meta-categories,
+		.news-meta-date,
+		.news-meta-videopost-author {
+			&:before {
+				width: 1rem;
+				height: 1rem;
+				line-height: 1rem;
+				font-size: 0.6rem;
+				background-repeat: no-repeat;
+				display: inline-block;
+				background-size: 100%;
+				background-position: center center;
+				margin-right: 0.2rem;
+			}
+		}
+
+
 	}
 	.news-meta-date,
 	.news-meta-videopost-author,
