--- a/src/sass/structure/header/_meta.scss
+++ b/src/sass/structure/header/_meta.scss
@@ -64,7 +64,7 @@
 
     body:not([data-scroll='0']) & {
         background-color: var(--color-white);
-        @include box-shadow(0 1px 3px rgba(0, 0, 0, 0.3));
+        @include box-shadow(0 0 21px rgba(0, 0, 0, 0.11));
     }
     body.nav-toggled & {
         top: unset;
