--- a/src/sass/structure/header/_grid.scss
+++ b/src/sass/structure/header/_grid.scss
@@ -10,9 +10,8 @@
     height: 100%;
 
     @media (min-width: $screen-sm) {
-        padding-left: floor(math.div($grid-gutter-width, 2));
-        padding-right: ceil(math.div($grid-gutter-width, 2));
-        width: $container-sm;
+
+        width: 100%;
     }
     @media (min-width: $screen-md) {
         width: 100%;
