--- a/src/sass/structure/header/_branding.scss
+++ b/src/sass/structure/header/_branding.scss
@@ -8,7 +8,7 @@
         display: none;
 	    margin: $fau-gutter-halfwidth 0;
 	
-        @media (min-width: $screen-sm) {
+        @media (min-width: $screen-md) {
             display: block;
         }
 
@@ -36,7 +36,7 @@
                 text-decoration: none;
             }
 
-            @media (min-width: $screen-sm) {
+            @media (min-width: $screen-md) {
                 flex-direction: column;
                 align-items: flex-start;
             }
@@ -57,7 +57,7 @@
             row-gap: 0;
 
             @media (max-width: $screen-xs),
-            (min-width: $screen-sm) and (max-width: $screen-lg) {
+            (min-width: $screen-md) and (max-width: $screen-lg) {
                 flex-wrap: wrap;
                 width: 240px;
             }
@@ -139,7 +139,7 @@
         }
     }
 
-    @media (max-width: $screen-sm) {
+    @media (max-width: $screen-md) {
         .md-showsitelogo:not(.nologo) & .branding {
             width: 100%;
             text-align: center;
