--- a/src/sass/structure/header/_metanav.scss
+++ b/src/sass/structure/header/_metanav.scss
@@ -4,14 +4,14 @@
 .meta-links-container {
     flex-shrink: 0;
 
-    @media (min-width: $screen-sm) {
+    @media (min-width: $screen-md) {
         display: none;
     }
 }
 
 #meta-menu {
 
-    @media (min-width: $screen-sm) {
+    @media (min-width: $screen-md) {
         display: none;
     }
 
@@ -39,7 +39,7 @@
     .meta-links {
         display: block;
 
-        @media (min-width: $screen-sm) {
+        @media (min-width: $screen-md) {
             display: flex;
         }
     }
@@ -123,7 +123,7 @@
     z-index: 100;
     padding: 15px;
 
-    @media (min-width: $screen-sm) {
+    @media (min-width: $screen-md) {
         display: flex;
         align-items: center;
         justify-content: space-between;
