#1252 break point for language switcher

--- a/src/sass/plugins/_rrze-multilang.scss
+++ b/src/sass/plugins/_rrze-multilang.scss
@@ -67,7 +67,7 @@
 		}
     }
 
-	@media (min-width: $screen-sm ) {
+	@media (min-width: $screen-md ) {
 		position: relative;
 		left: inherit;
 		top: inherit;
