--- a/src/sass/structure/header/_metanav.scss
+++ b/src/sass/structure/header/_metanav.scss
@@ -255,7 +255,7 @@
     max-height: 100%;
     text-align: left;
     
-    @media (min-width: $screen-sm) {
+    @media (min-width: $screen-md) {
         display: none;
     }
 
