--- a/src/sass/structure/header/_grid.scss
+++ b/src/sass/structure/header/_grid.scss
@@ -9,7 +9,7 @@
     width: 100%;
     height: 100%;
 
-    @media (min-width: $screen-sm) {
+    @media (min-width: $screen-md) {
 
         width: 100%;
     }
@@ -34,7 +34,7 @@
 	@media (min-width: $screen-md) {
 	     align-items: flex-end;
 	}
-        @media (min-width: $screen-sm) {
+        @media (min-width: $screen-md) {
             justify-content: space-between;
             padding: 1.2rem 0 1rem;
 
