--- a/src/sass/structure/hero/_banner.scss
+++ b/src/sass/structure/hero/_banner.scss
@@ -36,7 +36,7 @@
 	    @include box-shadow(0 10px 20px rgba(0,0,0,0.5));
 	    
 	    
-	    @media (min-width: $screen-sm) {
+	    @media (min-width: $screen-md) {
 		height: 182px;
 	    }
 	    @media (min-width: $screen-md) {
